--- a/index_artists.html
+++ b/index_artists.html
@@ -143,6 +143,12 @@
         <a class="link" href="https://soundcloud.com/cioccolato" target="_blank">SOUNDCLOUD</a>
       </p>
       
+      <p><h2>Kommilitonen</h2>
+      <img class="imm-art" src="images/komm.jpg"><br>
+      <div class="text-art">Kommilitonen è un duo italiano formatosi a Bolzano nel 2012. Il loro suono è semplice e caldo, la loro selezione composta da lunghe tracce IDM funzionali sia per uno studente universitario nella sua cameretta sia per una dancefoor. Si esibiscono in ambienti familiari, nei piccoli club e nei luoghi di sperimentazione, dove possono permettersi costruire la loro storia senza le pressioni di un pubblico assetato di kick da assecondare.
+      </div>
+        <a class="link" href="https://soundcloud.com/cioccolato" target="_blank">SOUNDCLOUD</a>
+      </p>
 
       
   </div>
