--- a/index_artists.html
+++ b/index_artists.html
@@ -62,6 +62,7 @@
       <hr class="line2">
 
       <p><h2>Stefano Polli</h2>
+      <img class="imm-art" src="images/polli.jpg"><br>
       <div class="text-art">Classe 1982, graphic designer e live media artist, specializzato in museografia, motion graphics e comunicazione visiva. Ha realizzato progetti museografici e di interaction design per MTV, Nazioni Unite, Triennale di Milano, Palazzo Reale, Nissan, Rinascente e molti altri.
       Cura identità e vjing del collettivo musicale Reset!, realizzando progetti ad alto livello sperimentale, come il primo vj set realizzato in Augmented Reality.
       I suoi progetti sono stati pubblicati su testate come Wired, Rolling Stones, Corriere e Repubblica.
@@ -129,9 +130,11 @@
 
       <p><h2>Dave</h2>
       <img class="imm-art" src="images/dave.jpg"><br>
-      <div class="text-art">Dj modenese, Little Dave è cresciuto artisticamente sotto l’ala di Johnny Paguro – Museek and Pizzico Records – ed è ora di casa al 65mq di Milano. É entrato a far parte della scena locale collaborando con LoveAndSound, un blog di ...</div>
+      <div class="text-art">Dj modenese, Little Dave è cresciuto artisticamente sotto l’ala di Johnny Paguro – Museek and Pizzico Records – ed è ora di casa al 65mq di Milano. É entrato a far parte della scena locale collaborando con LoveAndSound, blog di musica che organizza anche eventi, tra cui un mini-festival: il Vision:Air. Oltre a suonare in questi eventi, ha avuto modo di esibirsi in club più importanti come al Vibra e al Vox. Recentemente è entrato a far parte del blog “Where Is The Club?” nel ruolo di collaboratore esterno e recensore, trovando in esso la giusta ideologia musicale. Una volta trasferitosi a Milano per studiare sound design all’istituto SAE è entrato a fare parte dello staff di 65mq. Con una forte passione per i dischi in vinile, sintetizzatori modulari e arti del suono, il suo stile è influenzato da raw techno/house e suoni analogici sporchi.</div>
         <a class="link" href="#" target="_blank">WEBSITE</a>
       </p>
+
+      <hr class="line2">
 
       <p><h2>Present Continuous</h2>
       <img class="imm-art" src="images/dai.jpg"><br>
@@ -142,6 +145,20 @@
       </div>
         <a class="link" href="https://soundcloud.com/cioccolato" target="_blank">SOUNDCLOUD</a>
       </p>
+
+      <hr class="line2">
+
+      <p><h2>Albi Bello</h2>
+      <img class="imm-art" src="images/dai.jpg"><br>
+      <div class="text-art">XXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+      </div>
+        <a class="link" href="#" target="_blank">SOUNDCLOUD</a>
+      </p>
+
+      <hr class="line2">
       
       <p><h2>Kommilitonen</h2>
       <img class="imm-art" src="images/komm.jpg"><br>
