--- a/index_artists.html
+++ b/index_artists.html
@@ -148,14 +148,14 @@
 
       <hr class="line2">
 
-      <p><h2>Albi Bello</h2>
+      <p><h2>Paguro</h2>
       <img class="imm-art" src="images/dai.jpg"><br>
       <div class="text-art">XXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
       </div>
-        <a class="link" href="#" target="_blank">SOUNDCLOUD</a>
+        <a class="link" href="https://soundcloud.com/johnnypaguro" target="_blank">SOUNDCLOUD</a>
       </p>
 
       <hr class="line2">
@@ -164,7 +164,7 @@
       <img class="imm-art" src="images/komm.jpg"><br>
       <div class="text-art">Kommilitonen è un duo italiano formatosi a Bolzano nel 2012. Il loro suono è semplice e caldo, la loro selezione composta da lunghe tracce IDM funzionali sia per uno studente universitario nella sua cameretta sia per una dancefoor. Si esibiscono in ambienti familiari, nei piccoli club e nei luoghi di sperimentazione, dove possono permettersi costruire la loro storia senza le pressioni di un pubblico assetato di kick da assecondare.
       </div>
-        <a class="link" href="#" target="_blank">SOUNDCLOUD</a>
+        <a class="link" href="https://soundcloud.com/kommilitonen" target="_blank">SOUNDCLOUD</a>
       </p>
 
       
