--- a/index_artists.html
+++ b/index_artists.html
@@ -125,7 +125,7 @@
       <p><h2>Dave</h2>
       <img class="imm-art" src="images/dave.jpg"><br>
       <div class="text-art">Dj modenese, Little Dave è cresciuto artisticamente sotto l’ala di Johnny Paguro – Museek and Pizzico Records – ed è ora di casa al 65mq di Milano. É entrato a far parte della scena locale collaborando con LoveAndSound, blog di musica che organizza anche eventi, tra cui un mini-festival: il Vision:Air. Oltre a suonare in questi eventi, ha avuto modo di esibirsi in club più importanti come al Vibra e al Vox. Recentemente è entrato a far parte del blog “Where Is The Club?” nel ruolo di collaboratore esterno e recensore, trovando in esso la giusta ideologia musicale. Una volta trasferitosi a Milano per studiare sound design all’istituto SAE è entrato a fare parte dello staff di 65mq. Con una forte passione per i dischi in vinile, sintetizzatori modulari e arti del suono, il suo stile è influenzato da raw techno/house e suoni analogici sporchi.</div>
-        <a class="link" href="#" target="_blank">WEBSITE</a>
+        <a class="link" href="https://soundcloud.com/davide-cuoghi" target="_blank">SOUNDCLOUD</a>
       </p>
 
       <hr class="line2">
