--- a/index_artists.html
+++ b/index_artists.html
@@ -131,11 +131,10 @@
       <hr class="line2">
 
       <p><h2>Present Continuous</h2>
-      <img class="imm-art" src="images/dai.jpg"><br>
-      <div class="text-art">XXXXXXXXXXX
-        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+      <img class="imm-art" src="images/pres.jpg"><br>
+      <div class="text-art">Il presente progressivo o present continuous è uno dei tempi che si usano per esprimere il presente nell'inglese moderno.
+      Il presente progressivo si forma inserendo l'ausiliare to be (declinato al presente) tra il soggetto e il present participle (participio presente del verbo che si forma prendendo la forma base del verbo e aggiungendo la desinenza -ing).
+      Il presente progressivo viene usato principalmente per riferirsi ad azioni o eventi che si verificano nel momento esatto in cui si parla o si scrive.
       </div>
         <a class="link" href="https://soundcloud.com/cioccolato" target="_blank">SOUNDCLOUD</a>
       </p>
