--- a/index_artists.html
+++ b/index_artists.html
@@ -93,7 +93,7 @@
       <hr class="line2">
 
       <p><h2>Filippo Tassinari</h2>
-      <img class="imm-art" src="images/fab.jpg"><br>
+      <img class="imm-art" src="images/fab.png"><br>
       <div class="text-art">Filippo Tassinari pratica le promesse espressive dell’elettronica di consumo. Entusiasta ed inquieto per il risolvimento hobbistico dell’arte, presenterà una versione superflat della Persian series di Stan Brakhage.</div>
         <a class="link" href="http://issuu.com/fillotassi" target="_blank">WEBSITE</a>
       </p>
