--- a/index_artists.html
+++ b/index_artists.html
@@ -150,7 +150,7 @@
 
       <hr class="line2">
 
-      <p><h2>Paguro</h2>
+      <p><h2>Johnny Paguro</h2>
       <img class="imm-art" src="images/pag.jpg"><br>
       <div class="text-art">Musicista e grafico, Alberto Bello ha creato il suo alter ego musicale nel 2009, grazie alla proficua collaborazione artistica con Pizzico Records.
       Igadadadoo prima e Aftermath poi sono state due piccole e apprezzatissime gemme, intervallate da numerosi remix, che hanno fatto di Johnny Paguro un piccolo vanto, in un curriculum già reso importante da anni di residenze, radio shows e collaborazioni grafiche e sonore.
