--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
       Il presente progressivo viene usato principalmente per riferirsi ad azioni o eventi che si verificano nel momento esatto in cui si parla o si scrive.
       </div>
         <a class="link" href="https://soundcloud.com/cioccolato" target="_blank">SOUNDCLOUD</a>
+        <a class="link" href="http://pcontinuous.tumblr.com/" target="_blank">WEBSITE</a>        
       </p>
 
       <hr class="line2">
@@ -157,6 +158,7 @@
       In cantiere un nuovo ep per il prossimo autunno e il continuo lavoro di label managing per la sua amata Museek Record Label.
       </div>
         <a class="link" href="https://soundcloud.com/johnnypaguro" target="_blank">SOUNDCLOUD</a>
+        <a class="link" href="https://johnnypaguro.bandpage.com/" target="_blank">WEBSITE</a>
       </p>
   
      
