--- a/index.html
+++ b/index.html
@@ -61,17 +61,6 @@
 
       <hr class="line2">
 
-      <p><h2>Stefano Polli</h2>
-      <img class="imm-art" src="images/polli.jpg"><br>
-      <div class="text-art">Classe 1982, graphic designer e live media artist, specializzato in museografia, motion graphics e comunicazione visiva. Ha realizzato progetti museografici e di interaction design per MTV, Nazioni Unite, Triennale di Milano, Palazzo Reale, Nissan, Rinascente e molti altri.
-      Cura identità e vjing del collettivo musicale Reset!, realizzando progetti ad alto livello sperimentale, come il primo vj set realizzato in Augmented Reality.
-      I suoi progetti sono stati pubblicati su testate come Wired, Rolling Stones, Corriere e Repubblica.
-      Collabora presso gli studi AR.CH.IT architetti associati, Studio Azzurro, Studio Claudio Sinatti, Sugodesign.<br></div>
-        <a class="link" href="http://www.stefanopolli.com/" target="_blank">WEBSITE</a>
-      </p>
-
-      <hr class="line2">
-
       <p><h2>Super Doooper</h2>
         <img class="imm-art" src="images/sd.jpg"><br>
       <div class="text-art">Il contrasto tra mondo digitale e spazio fisico rappresenta una sfida che lo ha costantemente spinto verso nuovi risultati. Le caratteristiche mutevoli degli spazi in cui lavora non consentono mai una soluzione costante. Le sue opere spaziano da 3D-projection-mapping a interventi con fibre ottiche, sempre creando contrasti tra bianco e nero e linee geometriche che costituiscono la sua forte identità.<br></div>
@@ -156,6 +145,15 @@
       <div class="text-art">Musicista e grafico, Alberto Bello ha creato il suo alter ego musicale nel 2009, grazie alla proficua collaborazione artistica con Pizzico Records.
       Igadadadoo prima e Aftermath poi sono state due piccole e apprezzatissime gemme, intervallate da numerosi remix, che hanno fatto di Johnny Paguro un piccolo vanto, in un curriculum già reso importante da anni di residenze, radio shows e collaborazioni grafiche e sonore.
       In cantiere un nuovo ep per il prossimo autunno e il continuo lavoro di label managing per la sua amata Museek Record Label.
+      </div>
+        <a class="link" href="https://soundcloud.com/johnnypaguro" target="_blank">SOUNDCLOUD</a>
+        <a class="link" href="https://johnnypaguro.bandpage.com/" target="_blank">WEBSITE</a>
+      </p>
+
+
+      <p><h2>Ricky Deep</h2>
+      <img class="imm-art" src="images/pag.jpg"><br>
+      <div class="text-art">Riccardo Cassanelli, in arte Ricky Deep inizia la sua carriera musicale nel 2002 quando, insieme al fratello, apre il locale Deep Club a Formigine, suo paese d’origine.Nel 2004 inizia a lavorare per l’etichetta Mobility Records che lo porterà a collaborare con l’artista americano Fat Cat Hackett nel progetto Crosstown traffic per la realizzazione del singolo Music in Always. Nel 2005 si consolida il progetto Absynth, un live set insieme al fratello dove vengono miscelati dischi e strumentazioni sia analogiche che digitali. Questo progetto lo porta ad Ibizia, dove, dal 2006 al 2007 diventerà resident dj del noto club “Akelarre”. Attualmente Ricky Deep si esibisce in diversi club e collabora con l'Elektro &#38 Summer Festival proponendo sonorità deep house.
       </div>
         <a class="link" href="https://soundcloud.com/johnnypaguro" target="_blank">SOUNDCLOUD</a>
         <a class="link" href="https://johnnypaguro.bandpage.com/" target="_blank">WEBSITE</a>
