--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 
       <p><h2>Ricky Deep</h2>
-      <img class="imm-art" src="images/ricky.jpg"><br>
+      <img class="imm-art" src="images/ricky.png"><br>
       <div class="text-art">Riccardo Cassanelli, in arte Ricky Deep inizia la sua carriera musicale nel 2002 quando, insieme al fratello, apre il locale Deep Club a Formigine, suo paese d’origine.Nel 2004 inizia a lavorare per l’etichetta Mobility Records che lo porterà a collaborare con l’artista americano Fat Cat Hackett nel progetto Crosstown traffic per la realizzazione del singolo Music in Always. Nel 2005 si consolida il progetto Absynth, un live set insieme al fratello dove vengono miscelati dischi e strumentazioni sia analogiche che digitali. Questo progetto lo porta ad Ibizia, dove, dal 2006 al 2007 diventerà resident dj del noto club “Akelarre”. Attualmente Ricky Deep si esibisce in diversi club e collabora con l'Elektro &#38 Summer Festival proponendo sonorità deep house.
       </div>
         <a class="link" href="https://soundcloud.com/rickydeep" target="_blank">SOUNDCLOUD</a>
