--- a/mailto.html
+++ b/mailto.html
@@ -11,10 +11,7 @@
 <body>
 
 
-
-  <hr class="line">
-
-   <div><a class="link" href="mailto:info.atmo.crew@gmail.com" target="_blank"><button>E-mail</button></a></div>
+   <div><a class="link1" href="mailto:info.atmo.crew@gmail.com" target="_blank"><button>E-mail</button></a></div>
 
 </body>
 </html>
