--- a/mailto.html
+++ b/mailto.html
@@ -13,5 +13,18 @@
 
    <div><a class="link1" href="mailto:info.atmo.crew@gmail.com" target="_blank"><button>E-mail</button></a></div>
 
+
+   <form action="info.atmo.crew@gmail.com" method="post"
+    enctype="text/plain">
+
+    La tua e-mail :<br>
+
+    </form>
+      <input type="text" size="20" name="Nome">
+
+      <input type="submit" value="Invia">
+
+    </form>
+
 </body>
 </html>
