--- a/mailto.html
+++ b/mailto.html
@@ -14,13 +14,13 @@
    <div><a class="link1" href="mailto:info.atmo.crew@gmail.com" target="_blank"><button>E-mail</button></a></div>
 
 
-   <form action="info.atmo.crew@gmail.com" method="post"
+   <form class="link1" action="info.atmo.crew@gmail.com" method="post"
     enctype="text/plain">
 
-    La tua e-mail :<br>
+    E-mail :<br>
 
     </form>
-      <input type="text" size="20" name="Nome">
+      <input type="text" size="20" name="Nome"><br>
 
       <input type="submit" value="Invia">
 
