--- a/mailto.html
+++ b/mailto.html
@@ -14,12 +14,12 @@
    <div><a class="link1" href="mailto:info.atmo.crew@gmail.com" target="_blank"><button>E-mail</button></a></div>
 
 
-   <form class="link1" action="info.atmo.crew@gmail.com" method="post"
+   <form action="info.atmo.crew@gmail.com" method="post"
     enctype="text/plain">
 
-    E-mail :<br>
+    E-mail<br>
 
-    </form>
+    </form class="form">
       <input type="text" size="20" name="Nome"><br>
 
       <input type="submit" value="Invia">
