--- a/mailto.html
+++ b/mailto.html
@@ -14,7 +14,7 @@
    <div><a class="link1" href="mailto:info.atmo.crew@gmail.com" target="_blank"><button>E-mail</button></a></div>
 
 
-   <form action="info.atmo.crew@gmail.com" method="post"
+   <form action="mailto:info.atmo.crew@gmail.com" method="post"
     enctype="text/plain">
 
     E-mail<br>
