--- a/mailto.html
+++ b/mailto.html
@@ -22,7 +22,7 @@
     </form class="form">
       <input type="text" size="20" name="Nome"><br>
 
-      <input type="submit" value="Invia">
+      <input type="submit" value="SEND">
 
     </form>
 
