--- a/mailto.html
+++ b/mailto.html
@@ -22,7 +22,8 @@
     </form class="form">
       <input type="text" size="20" name="Nome"><br>
 
-      <input type="submit" value="SEND">
+      
+      <input type="submit" value="Submit Form" name="submit">
 
     </form>
 
