--- a/mailto.html
+++ b/mailto.html
@@ -11,7 +11,7 @@
 <body>
 
 
-   <div><a class="link1" href="mailto:info.atmo.crew@gmail.com" target="_blank"><button>E-mail</button></a></div>
+   <div><a class="link1" href="mailto:info.atmo.crew@gmail.com"><button>E-mail</button></a></div>
 
 
    <form action="mailto:info.atmo.crew@gmail.com" method="post"
@@ -22,9 +22,8 @@
     </form class="form">
       <input type="text" size="20" name="Nome"><br>
 
-      
-      <input type="submit" value="Submit Form" name="submit">
-
+      <input type="submit" value="SEND"
+>
     </form>
 
 </body>
