--- a/mailto.html
+++ b/mailto.html
@@ -14,8 +14,7 @@
    <div><a class="link1" href="mailto:info.atmo.crew@gmail.com"><button>E-mail</button></a></div>
 
 
-   <form action="//forms.brace.io/info.atmo.crew@gmail.com" method="post"
-    enctype="text/plain">
+   <form action="//forms.brace.io/info.atmo.crew@gmail.com">
 
     E-mail<br>
 
