--- a/mailto.html
+++ b/mailto.html
@@ -14,15 +14,11 @@
    <div><a class="link1" href="mailto:info.atmo.crew@gmail.com"><button>E-mail</button></a></div>
 
 
-   <form action="//forms.brace.io/info.atmo.crew@gmail.com">
 
-    E-mail<br>
-
-    </form class="form">
-      <input type="text" size="20" name="Nome"><br>
-
-      <input type="submit" value="SEND"
->
+    <form action="//forms.brace.io/info.atmo.crew@gmail.com">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
     </form>
 
 </body>
