--- a/mailto.html
+++ b/mailto.html
@@ -15,7 +15,7 @@
 
 
 
-    <form action="//forms.brace.io/info.atmo.crew@gmail.com">
+    <form action="//forms.brace.io/info.atmo.crew@gmail.com" method="POST">
     <input type="text" name="name">
     <input type="email" name="_replyto">
     <input type="submit" value="Send">
