--- a/mailto.html
+++ b/mailto.html
@@ -16,7 +16,7 @@
 
 
     <form action="//forms.brace.io/info.atmo.crew@gmail.com" method="POST">
-    <input type="email" name="_replyto">
+    <input type="email" name="_replyto"><br>
     <input type="submit" value="Send">
     </form>
 
