--- a/mailto.html
+++ b/mailto.html
@@ -17,7 +17,7 @@
 
     <form action="//forms.brace.io/info.atmo.crew@gmail.com" method="POST">
     <input type="email" name="_replyto"><br>
-    <input type="submit" value="Send">
+    <button type="submit">SEND</button>
     </form>
 
 </body>
