--- a/mailto.html
+++ b/mailto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Atmosphären</title>
-  <link rel="stylesheet" type="text/css" href="style2.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link href="favicon.ico" rel="icon" type="image/x-icon" />
 
 
