--- a/mailto.html
+++ b/mailto.html
@@ -3,17 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Atmosphären</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style2.css">
   <link href="favicon.ico" rel="icon" type="image/x-icon" />
 
 
 </head>
 <body>
-
-
-   <div><a class="link1" href="mailto:info.atmo.crew@gmail.com"><button>E-mail</button></a></div>
-
-
 
     <form action="//forms.brace.io/info.atmo.crew@gmail.com" method="POST">
     <input type="email" name="_replyto"><br>
