--- a/mailto.html
+++ b/mailto.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="email"> Email </div>
+    <div class="email">E-mail</div>
     <form action="//forms.brace.io/info.atmo.crew@gmail.com" method="POST">
     <input type="email" name="_replyto"><br>
     <button type="submit">SEND</button>
